feat: add get user by id swagger
