# docs/swagger.yaml
@@ -82,4 +82,25 @@ paths:
       summary: Get All registered account
       tags:
       - users
+  /users/{id}:
+    get:
+      consumes:
+      - application/json
+      description: show id, email, and password user by searched id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Users'
+      summary: Get user account by id
+      tags:
+      - users
 swagger: "2.0"
